--- a/333.html
+++ b/333.html
@@ -1,4 +1,4 @@
-<form action="/process.php" method="POST">
+<form action="process.php" method="POST">
   <div>
     <label for="say">What greeting do you want to say?</label>
     <input name="say" id="say" value="Hi">
